# cpp-project-template

./: .clang-format  .clang-tidy  .cmake-format.py  .cmake-format.yaml  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake  CmakeFormat.cmake  CmakeLint.cmake  CodeCoverage.cmake  CompilerOptions.cmake  Doxygen.cmake  DoxygenDoc.cmake  FetchDependencies.cmake  GitInfo.cmake  ProjectDependencies.cmake  ProjectGitInfo.cmake  ProjectVersion.cmake  Sanitizers.cmake  SourceBuilds.cmake  project_git_info.hpp.in
cmake/code_coverage/: code_coverage_checker.sh
cmake/git_info/: git_info.hpp.in
doc/: README.md  code-quality-tools.md  code_quality_tools.md  tools.md
docker/: Dockerfile  README.md  docker-commands.md
docs/: README.md
doxygen/: Doxyfile  Doxyfile.in  README.md
examples/: README.md
include/: README.md
scripts/: README.md  clang-format-check.sh  clang-format-checker.sh  clang-tidy-check.sh  coverage-lcov-gen.sh  coverage-report-checker.sh  coverage_report_checker.sh  doxygen-doc-gen.sh
src/: CMakeLists.txt  main.cpp  version.hpp
src/adder/: Adder.cpp  Adder.h  CMakeLists.txt
src/my_class/: CMakeLists.txt  my_class.h  my_class.hpp  my_concrete_class.cpp  my_concrete_class.h  my_concrete_class.hpp
src/version/: CMakeLists.txt  version.hpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/mocks/: CMakeLists.txt
test/mocks/my_class/: CMakeLists.txt  mock_my_class.h  mock_my_class.hpp
test/system/: CMakeLists.txt
test/unit/: CMakeLists.txt
test/unit/demo_mock_usage/: CMakeLists.txt  ut_demo_mock_usage.cpp
test/unit/my_class/: CMakeLists.txt  ut_my_concrete_class.cpp
test/unit/version/: CMakeLists.txt  ut_version.cpp
tests/: CMakeLists.txt
tests/mocks/: CMakeLists.txt
tests/mocks/mockExample/: CMakeLists.txt  MockExample.h
tests/unit/: CMakeLists.txt
tests/unit/adder/: AdderTest.cpp  CMakeLists.txt
tools/: README.md
